[package]
name = "mers_lib"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "library to use the mers language in other projects"
keywords = ["scripting"]
readme = "README.md"
repository = "https://github.com/Dummi26/mers"

[features]
default = ["parse"]
parse = ["run"]
run = []

[dependencies]
colored = "2.0.4"
line-span = "0.1.5"
