[package]
name = "mers_lib"
version = "0.9.18"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "library to use the mers language in other projects"
keywords = ["scripting"]
readme = "README.md"
repository = "https://github.com/Dummi26/mers"

[features]
default = ["parse"]

# for parsing and running mers code (for most situations: just enable parse)
parse = ["run"]
run = []

# color features are used when formatting error messages.
ecolor-term = ["dep:colored"]
ecolor-html = ["dep:html-escape"]

pretty-print = []

[dependencies]
line-span = "0.1.5"
colored = { version = "2.1.0", optional = true }
html-escape = { version = "0.2.13", optional = true }
